# tensorflow_catkin

./: CMakeLists.txt  README.md
cmake/Modules/: build_external_project_cmake.cmake
patches/: exclude_libpng_libjpeg.patch  fix_cupti.patch  fix_eager_link.patch  fix_grpc.patch  fix_grpc_off.patch  fix_kernels.patch  fix_libpng_64.patch  fix_nccl.patch  fix_python_bindings_off.patch  remove_build_flags.patch
